--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -6,22 +6,24 @@
 - type: twitter
   icon: "fa-brands fa-x-twitter"
 
+- type: linkedin
+  icon: "fab fa-linkedin"
+  url: "https://www.linkedin.com/in/pran0x" # Fill with your Linkedin homepage
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
 
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+# - type: rss
+#   icon: "fas fa-rss"
+#   noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
 #
-# - type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
+# icons powered by <https://fontawesome.com/>
+
 #
 # - type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
