--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: # fill in your Google verification code
+  google: eRiZ-yR714Oc6_McgVc4NU6f_TCTyzXsZjRGUbBojw4 # fill in your Google verification code
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
@@ -58,7 +58,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: G-J0DB63C2GP # fill in your Google Analytics ID
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
