Update .gitignore for devcontainer and tools directories
Added rules to ignore the .devcontainer and tools directories, as well as their contents, to prevent development environment and tooling files from being tracked in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-#Template
+# Template
 Template.md
+
+# DevContainer (ignore the entire devcontainer directory)
+/.devcontainer/
+/.devcontainer/*
+devcontainer.json
+
+# Tools (ignore the tools directory)
+/tools/
+/tools/*
+
 # Bundler cache
 .bundle
 vendor
