Remove VSCode configs and tools scripts
Deleted .vscode configuration files and shell scripts for running and testing the Jekyll site. Updated .gitignore to exclude .vscode directory. This simplifies the repository by removing editor-specific settings and build/test scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
 # Template
 Template.md
+#vscode
+
+/.vscode/*
+/.vscode/
 
 # DevContainer (ignore the entire devcontainer directory)
 /.devcontainer/
 /.devcontainer/*
 devcontainer.json
-
-# Tools (ignore the tools directory)
-/tools/
-/tools/*
-
 # Bundler cache
 .bundle
 vendor
