--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -8,6 +8,7 @@ on:
       - .gitignore
       - README.md
       - LICENSE
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -15,6 +16,7 @@ permissions:
   contents: read
   pages: write
   id-token: write
+
 # Allow one concurrent deployment
 concurrency:
   group: "pages"
@@ -30,7 +32,8 @@ jobs:
         with:
           fetch-depth: 0
           # submodules: true
-          # Uncomment if using Chirpy Starter with submodules
+          # If using the 'assets' git submodule from Chirpy Starter, uncomment above
+          # (See: https://github.com/cotes2020/chirpy-starter/tree/main/assets)
 
       - name: Setup Pages
         id: pages
@@ -42,15 +45,6 @@ jobs:
           ruby-version: 3.3
           bundler-cache: true
 
-      - name: Normalize image paths
-        run: |
-          echo "Normalizing post front-matter image.path entries..."
-          # If posts use `media_subpath: /images/picoCTF/` together with an absolute
-          # `image.path: /images/picoCTF/picoctf.png` it produces duplicated paths
-          # in the generated site. Strip the leading folder from image.path when
-          # it's present so the theme can combine media_subpath + image.path.
-          find _posts -type f -name '*.md' -print0 | xargs -0 sed -i "s|^\([[:space:]]*path:[[:space:]]*\)/images/picoCTF/\([^[:space:]]*\)$|\1\2|"
-
       - name: Build site
         run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
         env:
@@ -59,9 +53,8 @@ jobs:
       - name: Test site
         run: |
           bundle exec htmlproofer _site \
-            --disable-external \
-            --ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
-        # continue-on-error: true  # Optional: prevents workflow failure from minor HTML issues
+            \-\-disable-external \
+            \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
